[package]
name = "ai-limits"
version = "0.1.0"
edition = "2024"
description = "Show local AI CLI account usage limits from the command line"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cardozoarthur/ai-limits"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
